         bols(x) + bbs(x, center = "spectralDecomp")
     is a little better in recovering the true underlying functions than
     the default
         bols(x) + bbs(x, center = TRUE)		or, equivalently,
         bols(x) + bbs(x, center = "differenceMatrix")
     For bbs(x, y, center = TRUE) or bmrf(x, center = TRUE), the spectral
     decomposition is (and was) always used.

  o  fixed bug in stabsel: '...' was not passed to cvrisk and thus one could 
     not specify options for mclapply

  o  small improvements in manual


                CHANGES in `mboost' VERSION 2.2-1 (2013-01-14, r694)

  o  included warnings in stabsel() for better guidiance of the user:
     - A warning is issued if the upper bound for the FWER in stability
       selection is greater (by a certain margin) than the specified bound.
     - A warning is also issued if mstop is too small to select q variables.

  o  improved output of errors and warnings in stabsel.

  o  suppress the notes from package Matrix about method ambiguity
     ("Note: method with signature ... chosen, ... would also be valid")

  o  updated manual on base-learners to reflect the change in the default for
     degrees of freedom (addtionally, all options are now discussed in a
     separate section of the baselearner manual)

  o  updated vignette mboost_tutorial

  o  updated mboost_package.Rd: 
     now all important changes since mboost 2.0 are documented there

  o  changed roles of contributers to ctb

  o  suggested packages are now only used inside if(require(pkg)) statements

  o  changed startup message


                CHANGES in `mboost' VERSION 2.2-0 (2012-11-21, r680)

  o  switch from packages `multicore' and`snow' to `parallel'

  o  changed behavior of bols(x, intercept = FALSE) when x is a factor:
     now the intercept is simply dropped from the design matrix;
     coding can be specified as usually for factors.

  o  changed default for options("mboost_dftraceS") to FALSE, i.e.,